Add customised jQuery UI
NOTE - there are CSS conflicts between jQuery UI and bootsrap

--- a/OL3MVC/Demo/Demo/Views/Home/Index.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Index.cshtml
@@ -16,3 +16,11 @@
     </ul>
 </div>
 
+
+
+<p>Date: <input type="text" id="datepicker"></p>
+
+<div id="dialog" title="Basic dialog" style="display: none;">
+    <p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
+</div>
+
