--- a/OL3MVC/Demo/Demo/Views/Shared/_Layout.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Shared/_Layout.cshtml
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Demo ASP.NET Application</title>
+
+
+    @Scripts.Render("~/bundles/jquery")
+
+ 
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -35,8 +41,12 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+
+    @Styles.Render("~/bundles/jqueryUiCss")
+    @Scripts.Render("~/bundles/jQueryUi")
+
+    
     @RenderSection("scripts", required: false)
 </body>
 </html>
