--- a/OL3MVC/Demo/Demo/Content/Site.css
+++ b/OL3MVC/Demo/Demo/Content/Site.css
@@ -22,3 +22,14 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.subpage-body {
+    margin: 15px;
+}
+
+
+#wrapper {
+    margin-right: auto;
+    margin-left: auto;
+    width: 100%;
+}
