--- a/OL3MVC/Demo/Demo/Content/Site.css
+++ b/OL3MVC/Demo/Demo/Content/Site.css
@@ -23,8 +23,22 @@ textarea {
     max-width: 280px;
 }
 
+.footer {
+    background-color: orange;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 25px;
+    width: 100%;
+    overflow: hidden;
+}
+
 .subpage-body {
     margin: 15px;
+}
+
+.pane {
+    display: none; /* will appear when layout inits */
 }
 
 
@@ -32,4 +46,19 @@ textarea {
     margin-right: auto;
     margin-left: auto;
     width: 100%;
+    height: 100%;
 }
+
+#sub-content-center {
+    margin-top: 50px;
+    margin-right: 0px;
+    float: right;
+    width: 100%;
+    top: 0px;
+    bottom: 30px;
+    overflow: auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+
