Start implementing OL3

--- a/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
@@ -19,5 +19,8 @@
         </div>
     </div>
 
+    <link type="text/css" rel="stylesheet" href="//openlayers.org/en/v3.0.0/css/ol.css" />
+    <script type="text/javascript" src="//openlayers.org/en/v3.0.0/build/ol.js"></script>
+
 </section>
 
