Start working on OL capabilities

--- a/OL3MVC/Demo/Demo/Views/Home/Contact.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Contact.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<section id="contact-view" class="subpage-body view">
+<section id="contact-view" class="subpage-body view pane">
     @{
         ViewBag.Title = "Contact";
     }
