--- a/OL3MVC/Demo/Demo/Views/Home/Welcome.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Welcome.cshtml
@@ -1,4 +1,4 @@
-﻿<section id="welcome-view" class="subpage-body view">
+﻿<section id="welcome-view" class="subpage-body view pane">
 
     @{
         ViewBag.Title = "Weclome Page";
