--- a/OL3MVC/Demo/Demo/Views/Home/Index.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Index.cshtml
@@ -4,4 +4,9 @@
         @{Html.RenderPartial("~/Views/Home/Demo.cshtml");}
         @{Html.RenderPartial("~/Views/Home/Contact.cshtml");}
     </section>
+    <!-- section contains jQuery required DIVs for message boxes etc.-->
+    <section>
+        <div id="dialog-confirm"></div>
+        <div id="dialog-info"></div>
+    </section>
 </div>
