add wfs url for WFS capabilities

--- a/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
@@ -37,6 +37,14 @@
                                     <div class="form-group">
                                         <input type="submit" id="btnGetWmsCapabilities" class="btn btn-warning" value="Get Capabilities" onclick="Gnx.West.getWmsCapabilitiesCredentials()" />
                                     </div>
+                                    <div class="form-group">
+                                        <label>WFS Url</label>
+                                        <input id="inpWfsUrl" type="text" class="form-control" placeholder="WFS Url" value="http://gis-demo.seaplanner.com:8080/ows?" />
+                                    </div>
+
+                                    <div class="form-group">
+                                        <input type="submit" id="btnGetWfsCapabilities" class="btn btn-warning" value="Get Capabilities" onclick="Gnx.West.getWfsCapabilitiesCredentials()" />
+                                    </div>
 
                                 </div>
                             </div>
