--- a/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
@@ -62,9 +62,9 @@
                                 </thead>
                                 <tbody data-bind='foreach: layers'>
                                     <tr>
-                                        <td><input type="button" class="btn btn-info btn-xs" value="add to map" data-bind="disable: onMap, click: $root.addLayer2Map" /></td>
+                                        <td><input type="button" class="btn btn-info btn-xs" value="add to map" data-bind="disable: isOnMap, click: $root.addLayer2Map" /></td>
                                         <td><input type="button" class="btn btn-danger btn-xs" value=" [x] delete " data-bind="click: $root.removeLayer" /></td>
-                                        <td><input type="checkbox" data-bind="checked: visible, enable: onMap" /></td>
+                                        <td><input type="checkbox" data-bind="checked: visible, enable: isOnMap" /></td>
                                         <td><input type="checkbox" data-bind="checked: queryable, disable: true" /></td>
                                         <td><input class='required' data-bind='value: name' /></td>
                                         <td><input class='required' data-bind='value: title' /></td>
