Add icons to button
looks nicer

--- a/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
@@ -34,17 +34,19 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <input type="submit" id="btnGetWmsCapabilities" class="btn btn-warning" value="Get Capabilities" onclick="Gnx.West.getWmsCapabilitiesCredentials()" />
+                                    <a href="#" class="btn btn-warning" id="btnGetWmsCapabilities" onclick="Gnx.West.getWmsCapabilitiesCredentials()">
+                                        <i class="glyphicon glyphicon-refresh"></i>&nbsp;Get Capabilities
+                                    </a>
                                 </div>
                                 <div class="form-group">
                                     <label>WFS Url</label>
                                     <input id="inpWfsUrl" type="text" class="form-control" placeholder="WFS Url" value="http://localhost:8080/geoserver/ows?" />
                                 </div>
-
                                 <div class="form-group">
-                                    <input type="submit" id="btnGetWfsCapabilities" class="btn btn-warning" value="Get Capabilities" onclick="Gnx.West.getWfsCapabilitiesCredentials()" />
+                                    <a href="#" class="btn btn-warning" id="btnGetWfsCapabilities" onclick="Gnx.West.getWfsCapabilitiesCredentials()">
+                                        <i class="glyphicon glyphicon-refresh"></i>&nbsp;Get Capabilities
+                                    </a>
                                 </div>
-
                             </div>
                         </div>
                         <div class="col-sm-8">
