--- a/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
@@ -50,7 +50,7 @@
                             </div>
                         </div>
                         <div class="col-sm-8">
-                            <table class="table table-striped table-bordered table-condensed" data-bind='visible: layers().length > 0'>
+                            <table class="table table-striped table-bordered table-condensed" >
                                 <thead>
                                     <tr>
                                         <th/>
@@ -59,7 +59,7 @@
                                         <th>Queryable</th>
                                         <th>Name</th>
                                         <th>Title</th>
-                                        <th />
+                                        <th>Type</th>
                                     </tr>
                                 </thead>
                                 <tbody data-bind='foreach: layers'>
@@ -68,9 +68,9 @@
                                         <td><input type="button" class="btn btn-danger btn-xs" value=" [x] delete " data-bind="click: $root.removeLayer" /></td>
                                         <td><input type="checkbox" data-bind="checked: visible, enable: isOnMap" /></td>
                                         <td><input type="checkbox" data-bind="checked: queryable, disable: true" /></td>
-                                        <td><input class='required' data-bind='value: name' /></td>
-                                        <td><input class='required' data-bind='value: title' /></td>
-                                        <td><input class='required' data-bind='value: type' /></td>
+                                        <td><input type="text" class='required' data-bind="value: name" readonly /></td>
+                                        <td><input class='required' data-bind="value: title" readonly /></td>
+                                        <td><input class='required' data-bind="value: type" readonly /></td>
                                         
                                     </tr>
                                 </tbody>
