Add ol3 layer switcher control
https://github.com/walkermatt/ol3-layerswitcher/

--- a/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
@@ -89,6 +89,9 @@
     <link type="text/css" rel="stylesheet" href="//openlayers.org/en/v3.0.0/css/ol.css" />
     <script type="text/javascript" src="//openlayers.org/en/v3.0.0/build/ol.js"></script>
 
+    @*link ol3 layer switcher control*@
+    <link href="~/Scripts/ol3-layerswitcher/src/ol3-layerswitcher.css" rel="stylesheet" />
+    <script src="~/Scripts/ol3-layerswitcher/src/ol3-layerswitcher.js"></script>
     @Scripts.Render("~/bundles/OpenLayers2")
 
     @*<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/openlayers/2.12/OpenLayers.min.js"></script>*@
