Link ol3 popup css & js

--- a/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
@@ -90,8 +90,14 @@
     <script type="text/javascript" src="//openlayers.org/en/v3.0.0/build/ol.js"></script>
 
     @*link ol3 layer switcher control*@
-    <link href="~/Scripts/ol3-layerswitcher/src/ol3-layerswitcher.css" rel="stylesheet" />
-    <script src="~/Scripts/ol3-layerswitcher/src/ol3-layerswitcher.js"></script>
+    @*<link href="~/Scripts/ol3-layerswitcher/src/ol3-layerswitcher.css" rel="stylesheet" />
+    <script src="~/Scripts/ol3-layerswitcher/src/ol3-layerswitcher.js"></script>*@
+
+    @*link ol3 popup control*@
+    <link href="~/Scripts/ol3-popup/src/ol3-popup.css" rel="stylesheet" />
+    <script src="~/Scripts/ol3-popup/src/ol3-popup.js"></script>
+
+    @*link OpenLayers2 for WFS capabilities parsing*@
     @Scripts.Render("~/bundles/OpenLayers2")
 
     @*<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/openlayers/2.12/OpenLayers.min.js"></script>*@
