Add comment to demo view

--- a/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
@@ -47,6 +47,11 @@
                                         <i class="glyphicon glyphicon-refresh"></i>&nbsp;Get Capabilities
                                     </a>
                                 </div>
+                                
+                            </div>
+                            <div class="bg-info" style="padding:5px;margin-left: -15px;">
+                                When loading Capabilities previously loaded layers will be removed.
+                                Which means - only WMS or WFS layers can be visible at time.
                             </div>
                         </div>
                         <div class="col-sm-8">
