Text and view names changes

--- a/OL3MVC/Demo/Demo/Views/Home/Index.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     <section class="main">
         @{Html.RenderPartial("~/Views/Home/Welcome.cshtml");}
         @{Html.RenderPartial("~/Views/Home/Demo.cshtml");}
-        @{Html.RenderPartial("~/Views/Home/Contact.cshtml");}
+        @{Html.RenderPartial("~/Views/Home/About.cshtml");}
     </section>
     <!-- section contains jQuery required DIVs for message boxes etc.-->
     <section>
