--- a/OL3MVC/Demo/Demo/Views/Shared/_Layout.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Shared/_Layout.cshtml
@@ -39,9 +39,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a class="element" href="#/welcome"><span class="icon-grid">&nbsp;</span>Searoc Tasks <sup>v 1.0</sup></a></li>
-                    <li><a class="element" href="#/demo"><span class="icon-comments">&nbsp;</span>Demo</a></li>
-                    <li><a class="element" href="#/contact"><span class="icon-comments">&nbsp;</span>Contact</a></li>
+                    <li><a class="element" href="#/welcome"><span class="glyphicon glyphicon-th-large icon-grid">&nbsp;</span>Searoc Tasks <sup>v 1.0</sup></a></li>
+                    <li><a class="element" href="#/demo"><span class="glyphicon glyphicon-play icon-comments">&nbsp;</span>Demo</a></li>
+                    <li><a class="element" href="#/about"><span class="icon-comments">&nbsp;</span>About</a></li>
                 </ul>
             </div>
         </div>
