--- a/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
@@ -54,7 +54,7 @@
                                 Which means - only WMS or WFS layers can be visible at time.
                             </div>
                         </div>
-                        <div class="col-sm-8">
+                        <div class="col-sm-8" id="gnx-layers-grid">
                             <table class="table table-striped table-bordered table-condensed" >
                                 <thead>
                                     <tr>
@@ -82,9 +82,6 @@
                             </table>
                         </div>
 
-                        <div id="west-inner">
-
-                        </div>
                     </div>
                 </div>
             </div>
