--- a/OL3MVC/Demo/Demo/Content/Site.css
+++ b/OL3MVC/Demo/Demo/Content/Site.css
@@ -65,6 +65,23 @@ textarea {
 }
 
 
-.ui-layout-toggler{
+.ui-layout-toggler {
     background-color: lightblue;
+}
+
+
+.shadow-light {
+    -moz-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3), 0 3px 8px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3), 0 3px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3), 0 3px 8px rgba(0, 0, 0, 0.2);
+}
+
+.shadow {
+    -webkit-box-shadow: 5px 5px 12px 0px rgba(0,0,0,0.95);
+    -moz-box-shadow: 5px 5px 12px 0px rgba(0,0,0,0.95);
+    box-shadow: 5px 5px 12px 0px rgba(0,0,0,0.95);
+}
+
+.jumbotron {
+    padding: 18px 20px;
 }
