--- a/OL3MVC/Demo/Demo/Views/Home/Index.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
         @{Html.RenderPartial("~/Views/Home/Welcome.cshtml");}
         @{Html.RenderPartial("~/Views/Home/Demo.cshtml");}
         @{Html.RenderPartial("~/Views/Home/About.cshtml");}
+        @{Html.RenderPartial("~/Views/Home/What.cshtml");}
     </section>
     <!-- section contains jQuery required DIVs for message boxes etc.-->
     <section>
