--- a/OL3MVC/Demo/Demo/Views/Shared/_Layout.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Shared/_Layout.cshtml
@@ -41,7 +41,8 @@
                 <ul class="nav navbar-nav">
                     <li><a class="element" href="#/welcome"><span class="glyphicon glyphicon-th-large icon-grid">&nbsp;</span>Searoc Tasks <sup>v 1.0</sup></a></li>
                     <li><a class="element" href="#/demo"><span class="glyphicon glyphicon-play icon-comments">&nbsp;</span>Demo</a></li>
-                    <li><a class="element" href="#/about"><span class="icon-comments">&nbsp;</span>About</a></li>
+                    <li><a class="element" href="#/about"><span class="icon-comments">&nbsp;</span>About project</a></li>
+                    <li><a class="element" href="#/whatelse"><span class="icon-comments">&nbsp;</span>What else</a></li>
                 </ul>
             </div>
         </div>
