--- a/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
@@ -1,4 +1,4 @@
-﻿<section id="demo-view" class="subpage-body view pane">
+﻿<section id="demo-view" class="subpage-body view initially-hidden-pane">
 
     <div id="wrapper">
         <!-- the content -->
@@ -47,7 +47,7 @@
                                         <i class="glyphicon glyphicon-refresh"></i>&nbsp;Get Capabilities
                                     </a>
                                 </div>
-                                
+
                             </div>
                             <div class="bg-info" style="padding:5px;margin-left: -15px;">
                                 When loading Capabilities previously loaded layers will be removed.
@@ -55,11 +55,11 @@
                             </div>
                         </div>
                         <div class="col-sm-8" id="gnx-layers-grid">
-                            <table class="table table-striped table-bordered table-condensed" >
+                            <table class="table table-striped table-bordered table-condensed">
                                 <thead>
                                     <tr>
-                                        <th/>
-                                        <th/>
+                                        <th />
+                                        <th />
                                         <th>Visible</th>
                                         <th>Queryable</th>
                                         <th>Name</th>
@@ -76,7 +76,7 @@
                                         <td><input type="text" class='required' data-bind="value: name" readonly /></td>
                                         <td><input class='required' data-bind="value: title" readonly /></td>
                                         <td><input class='required' data-bind="value: type" readonly /></td>
-                                        
+
                                     </tr>
                                 </tbody>
                             </table>
@@ -93,7 +93,7 @@
 
     @*link ol3 layer switcher control*@
     @*<link href="~/Scripts/ol3-layerswitcher/src/ol3-layerswitcher.css" rel="stylesheet" />
-    <script src="~/Scripts/ol3-layerswitcher/src/ol3-layerswitcher.js"></script>*@
+        <script src="~/Scripts/ol3-layerswitcher/src/ol3-layerswitcher.js"></script>*@
 
     @*link ol3 popup control*@
     <link href="~/Scripts/ol3-popup/src/ol3-popup.css" rel="stylesheet" />
