--- a/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
@@ -55,6 +55,9 @@
                             </div>
                         </div>
                         <div class="col-sm-8" id="gnx-layers-grid">
+                            <div class="bg-info" >
+                                Add layers and click on the map to get WMS feature info ot vector feature data
+                            </div>
                             <table class="table table-striped table-bordered table-condensed">
                                 <thead>
                                     <tr>
