Change GeoServer url

--- a/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
+++ b/OL3MVC/Demo/Demo/Views/Home/Demo.cshtml
@@ -30,7 +30,7 @@
 
                                 <div class="form-group">
                                     <label>WMS Url</label>
-                                    <input id="inpWmsUrl" type="text" class="form-control" placeholder="WMS Url" value="http://localhost:8080/geoserver/ows?" />
+                                    <input id="inpWmsUrl" type="text" class="form-control" placeholder="WMS Url" value="http://gis-demo.seaplanner.com:8080/ows?" />
                                 </div>
 
                                 <div class="form-group">
@@ -40,7 +40,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label>WFS Url</label>
-                                    <input id="inpWfsUrl" type="text" class="form-control" placeholder="WFS Url" value="http://localhost:8080/geoserver/ows?" />
+                                    <input id="inpWfsUrl" type="text" class="form-control" placeholder="WFS Url" value="http://gis-demo.seaplanner.com:8080/ows?" />
                                 </div>
                                 <div class="form-group">
                                     <a href="#" class="btn btn-warning" id="btnGetWfsCapabilities" onclick="Gnx.West.getWfsCapabilitiesCredentials()">
